# phagetransformer

./: README.md  pyproject.toml
scripts/: align_phages_to_hosts.py  attention.py  codon_stats.py  compare.py  compute_phage_hit_regions.py  download_host_genomes.py  eval_utils.py  evaluate.py  evaluate_bacteria.py  evaluate_phages.py  extract_importance_genomes.py  importance.py  importance_single.py  scan.py
src/phagetransformer/: __init__.py  annotate.py  cli.py  dataset.py  evaluate.py  extract.py  init_model.py  model.py  predict.py  train.py  utils.py
