[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phagetransformer"
version = "0.1.0"
description = "Hierarchical DNA classifier for phage host prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "biopython>=1.80",
    "matplotlib>=3.6",
]

[project.scripts]
phagetransformer = "phagetransformer.cli:main"

[project.urls]
Repository = "https://github.com/yourname/phagetransformer"

[tool.setuptools.packages.find]
where = ["src"]
